Dev v0.7.1
Moved vehicle compatibility list into database
